# IGProjects_x64_VS2022

./: .gitignore  CMakeLists.txt  CMakePresets.json  autores.txt  copy-resources.cmake
IG1App/: Cube.cpp  Cube.h  Entity.h  IG1App.cpp  IG1App.h  IG1App.vcxproj  IG1App.vcxproj.filters  Mesh.cpp  Mesh.h  RGB_Cube.cpp  RGB_Cube.h  Scene.cpp  Scene.h  regular_polygon.h  rgb_rectangle.cpp  rgb_rectangle.h  rgb_triangle.cpp  rgb_triangle.h  scene_e1.cpp  scene_e10.cpp  scene_e13.cpp  scene_e6.h  scene_e8.cpp  showcase_scene.cpp  showcase_scene.h  single_color_entity.cpp  single_color_entity.h
IG1App/camera/: Camera.cpp  Camera.h
IG1App/entities/: Entity.h  RGB_Cube.cpp  RGB_Cube.h  rgb_rectangle.cpp  rgb_triangle.cpp  single_color_entity.cpp
IG1App/entity/: Cube.cpp  Entity.cpp  Entity.h  box_outline.cpp  box_outline.hpp  entity_with_texture.cpp  entity_with_texture.hpp  glass_parapet.cpp  glass_parapet.hpp  ground.cpp  ground.h  photograph.cpp  photograph.hpp  regular_polygon.cpp  rgb_cube.h  rgb_rectangle.cpp  rgb_rectangle.h  rgb_triangle.cpp  rgb_triangle.h  single_color_entity.cpp  single_color_entity.h  skibidi.cpp  skibidi.hpp  star3.cpp  star3.hpp
IG1App/image/: Texture.cpp  Texture.h
IG1App/mesh/: Mesh.cpp  Mesh.h  Shader.cpp  Shader.h
IG1App/scene/: Scene.cpp  Scene.h  scene_e10.cpp  scene_e10.h  scene_e8.h  showcase_scene.cpp  showcase_scene.h
IG1App/scenes/: scene_e1.h  scene_e13.h  scene_e6.cpp
IG1App/x64/Debug/: IG1AppDebug.exe.recipe  IG1AppDebug.ilk  vc143.idb
IG1App/x64/Debug/IG1App.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  IG1App.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
assets/images/: skibidi-v2.aseprite  skibidi.aseprite
assets/models/: skibidi.blend  skibidi.blend1  skibidi.mtl
assets/shaders/: simple_light_vertex.glsl  simple_vertex.glsl  skibidi_fragment.glsl  skibidi_vertex.glsl  texture_vertex.glsl  vcolors_vertex.glsl
